fix: bugs in the calculator and Names List components, with the property overflow: scroll and overflow: hidden, were fixed

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,12 @@
   flex-direction: column;
 }
 
+.contenedorGeneral{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .logoContenedor{
   widows: 100%;
   height: 100px;
@@ -22,13 +28,21 @@
   height: 100px;
 }
 
+.derecha{
+  display: flex;
+    align-items: center;
+    margin-left: 150px;
+}
 .contenedorCalculadora{
   width: 400px;
   height: 600px;
   padding: 14px;
+  margin-top: 20px;
+  margin-right: 50px;
   background-color: #99c9ff;
   border-radius: 20px;
   border: 5px solid white;
+  
 }
 
 .fila{
@@ -38,22 +52,37 @@
   justify-content: center;
 }
 
+.inputBoton{
+  display: flex;
+  align-items: center;
+  justify-self: center;
+  flex-direction: column;
+}
 
-.tablerContainer{
-display: flex;
-flex-direction: column;
-flex:1 1;
+input{
+  background-color: #0a0a23;
+  box-shadow: -1px 1px 1px 1px white;
+  color: white;
+  height: 25px;
+  padding: 10px;
+  margin: 0px 15px 0px 0px;
+  margin-top: 15px;
+  border-radius: 20px;
+  font-size: 16px;
+}
+input:hover{
+  background-color:#175d96;
 }
 
 .agregarNombre{
-    width: 150px;
-    height: 60px;
+    width: 100px;
+    height: 50px;
     padding: 10px;
-    margin: 0px 15px 5px 0px;
+    margin: 0px 15px 0px 0px;
     margin-top: 15px;
     background-color: #a48869;
     color: white;
-    font-size: 30px;
+    font-size: 20px;
     font-family: Roboto, sans-serif;
     border-radius: 18px;
     border: 2px solid white;
@@ -62,20 +91,43 @@ flex:1 1;
 .agregarNombre:hover{
   background-color: rosybrown;
 }
-input{
-  background-color: #0a0a23;
-  box-shadow: -1px 1px 1px 1px white;
+
+.tituloLista{
+  background-color: #212529;
+  height: 30px;
+  padding: 20px;
+  margin-top: 30px;
   color: white;
-  height: 25px;
-  padding: 10px;
-  margin: 0px 15px 5px 0px;
-  /* margin-right: 5px;
-  margin-left: 0%; */
-  margin-top: 15px;
-  border-radius: 20px;
-
-
+  justify-content: center;
 }
-input:hover{
-  background-color:#175d96;
+
+.lista{
+  margin-bottom: 5px;
+  flex-wrap: wrap;
+}
+
+.listaNombre{
+  color: black;
+  height: 30px;
+  font-size: 20px;
+  list-style-type: none;
+  margin: 5px;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid #212529;
+  overflow: hidden;
+ 
+}
+
+.contenedorTabla{
+  width: 400px;
+  height: 540px;
+  padding: 14px;
+  margin-top: 20px;
+  margin-right: 50px;
+  background-color: white;
+  border-radius: 2px;
+  border: 2px solid black;
+  overflow: hidden;
+  overflow: scroll;
 }
