--- a/src/componentes/pantalla/pantalla.css
+++ b/src/componentes/pantalla/pantalla.css
@@ -2,6 +2,7 @@
     height: 75px;
     border-radius: 50px;
     margin-bottom: 20px;
+    margin-left: 20px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -13,4 +14,5 @@
     padding-right: 30px;
     margin: 1px solid #888;
     box-shadow: -1px 4px 1px 1px white;
+    overflow: hidden;
 }
